<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    tools:context=".MainActivity"
    android:background="@drawable/main_bg_gradient">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_centerHorizontal="true"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/flag_icon"
            android:layout_width="90dp"
            android:layout_height="60dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/bd_flag" />

        <Button
            android:id="@+id/dhaka_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@color/milk_coffee"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:text="@string/dhaka"
            android:textSize="22sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/chittagong_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/chittagong"
            android:textSize="22sp"
            android:textStyle="bold"
            android:background="@color/milk_coffee"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"/>

        <Button
            android:id="@+id/rajshahi_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@color/milk_coffee"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:text="@string/raj"
            android:textSize="22sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/barishal_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@color/milk_coffee"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:text="@string/barishal"
            android:textSize="22sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/sylhet_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@color/milk_coffee"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:text="@string/sylhet"
            android:textSize="22sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/mymensingh_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@color/milk_coffee"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:text="@string/mymen"
            android:textSize="22sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/khulna_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@color/milk_coffee"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:text="@string/khulna"
            android:textSize="22sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/rangpur_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@color/milk_coffee"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:text="@string/rangpur"
            android:textSize="22sp"
            android:textStyle="bold" />

    </LinearLayout>

</RelativeLayout>
